--- a/style.css
+++ b/style.css
@@ -1,1 +1,72 @@
+.container{
+    width: auto;
+    height: auto;
+    padding: 0px;
+    margin: 0px;
+    display: flex;
+}
+.about{
+    background-color: aqua;
+    padding: 15px;
+    min-width: 300px;
+}
 
+.AboutItem{
+    padding-right: 15px;
+    font-size: large;
+    color: white;
+    background-color: blue;
+    border-radius: 5px;
+}
+.HTML{
+    display: flex;
+    flex-direction: column;
+}
+.Skillscontainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+}
+.SkillsContainer1{
+    display: flex;
+    flex-direction: row;
+}
+.Skillblockleft {
+   
+}
+
+.Skillblockright{
+    
+}
+
+.Skillscontainer2{
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    padding-bottom: 20px;
+}
+
+.HTMCSS{
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+.Interests{
+    display: flex;
+    flex-direction: column;
+    
+}
+.InterestsItems{
+    font-size: 20px;
+    color:rgb(240, 8, 151);
+    margin-top: 0px;
+}
+#dot {
+    height: 15px;
+    width: 15px;
+    background-color: ;
+    border:solid; 
+    border-width: thin;
+    border-radius: 50%;
+
+    display: inline-block;}
