--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 .about{
     background-color: aqua;
     padding: 15px;
-    min-width: 300px;
+    min-width: 250px;
+    max-width: 300px;
 }
 
 .AboutItem{
@@ -17,6 +18,7 @@
     color: white;
     background-color: blue;
     border-radius: 5px;
+    height: 30px;
 }
 .HTML{
     display: flex;
@@ -32,12 +34,13 @@
     display: flex;
     flex-direction: row;
 }
-.Skillblockleft {
-   
-}
 
-.Skillblockright{
-    
+.Biocontainer{
+    font-size: 23px;
+    text-align: justify;
+    text-indent: 45px;
+    padding: 10px;
+    background-color: rgb(245, 238, 178);
 }
 
 .Skillscontainer2{
@@ -59,6 +62,16 @@
 .InterestsItems{
     font-size: 20px;
     color:rgb(240, 8, 151);
+    margin-top: 0px;
+}
+.LanguageItem{
+    color: rgb(233, 171, 2);
+    font-size: 20px;
+    margin-top: 0px;
+}
+.Sertifitems{
+    color: rgb(4, 49, 250);
+    font-size: 20px;
     margin-top: 0px;
 }
 #dot {
