--- a/style.css
+++ b/style.css
@@ -1,89 +1,100 @@
 .container {
-  width: auto;
-  height: auto;
-  padding: 0px;
-  margin: 0px;
-  display: flex;
+    width: auto;
+    height: auto;
+    padding: 0px;
+    margin: 0px;
+    display: flex;
 }
+
 .about {
-  background-color: aqua;
-  padding: 15px;
-  min-width: 250px;
-  max-width: 300px;
+    background-color: aqua;
+    padding: 15px;
+    min-width: 250px;
+    max-width: 300px;
 }
 
 .AboutItem {
-  padding-right: 15px;
-  font-size: large;
-  color: white;
-  background-color: blue;
-  border-radius: 5px;
-  height: 30px;
+    padding-right: 15px;
+    font-size: large;
+    color: white;
+    background-color: blue;
+    border-radius: 5px;
+    height: 30px;
 }
+
 .HTML {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
+
 .Skillscontainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
+
 .SkillsContainer1 {
-  display: flex;
-  flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
 
 .Biocontainer {
-  font-size: 23px;
-  text-align: justify;
-  text-indent: 45px;
-  padding: 10px;
-  background-color: rgb(245, 238, 178);
+    font-size: 23px;
+    text-align: justify;
+    text-indent: 45px;
+    padding: 10px;
+    background-color: rgb(245, 238, 178);
 }
 
 .Skillscontainer2 {
-  display: flex;
-  justify-content: left;
-  flex-direction: column;
-  padding-bottom: 20px;
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    padding-bottom: 20px;
 }
 
 .HTMCSS {
-  font-size: 18px;
-  margin-bottom: 5px;
+    font-size: 18px;
+    margin-bottom: 5px;
 }
+
 .Interests {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
+
 .InterestsItems {
-  font-size: 20px;
-  color: rgb(240, 8, 151);
-  margin-top: 0px;
+    font-size: 20px;
+    color: rgb(240, 8, 151);
+    margin-top: 0px;
 }
+
 .LanguageItem {
-  color: rgb(233, 171, 2);
-  font-size: 20px;
-  margin-top: 0px;
+    color: rgb(233, 171, 2);
+    font-size: 20px;
+    margin-top: 0px;
 }
+
 .Sertifitems {
-  color: rgb(4, 49, 250);
-  font-size: 20px;
-  margin-top: 0px;
+    color: rgb(4, 49, 250);
+    font-size: 20px;
+    margin-top: 0px;
 }
-.Jobitems{
-display: flex;
-flex-direction: row;
+
+.Jobitems {
+    display: flex;
+    flex-direction: row;
 
 
 }
-.Jobitem{
+
+.Jobitem {
     max-width: 650px;
     min-height: 233px;
 }
-.StudyItem{
-    
+
+.StudyItem {
+
     padding-right: 15px;
     font-size: large;
     color: white;
@@ -91,13 +102,21 @@ flex-direction: row;
     border-radius: 5px;
     height: 30px;
 }
-#dot {
-  height: 15px;
-  width: 15px;
-  background-color: ;
-  border: solid;
-  border-width: thin;
-  border-radius: 50%;
 
-  display: inline-block;
+.dot {
+    height: 15px;
+    width: 15px;
+    background-color: ;
+    border: solid;
+    border-width: thin;
+    border-radius: 50%;
+
+    display: inline-block;
+}
+
+.foot {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: rgb(236, 238, 129)
 }
